--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="threads_menu_item_title">Threads</string>
     <string name="active_fragment_tag">active_fragment</string>
     <string name="select_picture">Select picture</string>
+
+    <string name="use_16_bit_precision_menu_item_title">Use 16 bit precision</string>
+    <string name="configuration_menu_item_title">Configuration</string>
+
 </resources>
